<resources>
    <string name="app_name">Todos</string>
    <string name="splash_loading">Loading…</string>
    <string name="signup_title">Sign up</string>
    <string name="signup_submit_button">Sign up</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_confirm_password_hint">Confirm password</string>
    <string name="signup_already_have_account">I already have an account</string>
    <string name="login_create_account">Create a new account</string>
    <string name="login_submit_button">Log in</string>
    <string name="login_title">Log in</string>
    <string name="auth_name_hint">Name</string>
    <string name="generic_error">Could not load the resource. Try again later.</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="generic_add">Add</string>
    <string name="generic_cancel">Cancel</string>
    <string name="add_todo_dialog_title">New entry</string>
    <string name="dashboard_menu_logout">Log out</string>
</resources>